==> steven-chen/MicroView-Arduino-Library/MicroView.cpp <==
#include <MicroView.h>
#include <string.h>
#include <math.h>
#include "nrf_delay.h"
#include "nrf_gpio.h"
#include "print.h"
#include <font5x7.h>
#include <font8x16.h>
#include <fontlargenumber.h>
#include <7segment.h>
#include <space01.h>
#include <space02.h>
#include <space03.h>
#define TOTALFONTS		7
#define recvLEN			100

void MicroView::begin() {
	// default 5x7 font
	setFontType(0);
	setColor(WHITE);
	setDrawMode(NORM);
	setCursor(0,0);
  nrf_gpio_cfg_output(OLED_CS);
  nrf_gpio_cfg_output(OLED_DC);
	nrf_gpio_cfg_output(OLED_RES);
  nrf_gpio_cfg_output(OLED_DAT);
	nrf_gpio_cfg_output(OLED_CLK);

	RESETLOW;
	
	// Give some time for power to stabilise
	nrf_delay_us(10);

	RESETHIGH;
	nrf_delay_us(5);
	RESETLOW;

	// Initialise SPI
	MVSPI.begin();

	nrf_delay_us(5);

	// bring out of reset
	RESETHIGH;

	nrf_delay_us(10);

	// Init sequence for 64x48 OLED module
	//	command(DISPLAYOFF);				// 0xAE
	//	command(SETDISPLAYCLOCKDIV, 0x80);	// 0xD5 / the suggested ratio 0x80
	command(SETMULTIPLEX, 0x2F);		// 0xA8
	//	command(SETDISPLAYOFFSET, 0x0);		// 0xD3 / no offset
	//	command(SETSTARTLINE | 0x0);		// 0x40 / line #0
	command(CHARGEPUMP, 0x14);			// 0x8D / enable charge pump
	//	command(NORMALDISPLAY);				// 0xA6
	//	command(DISPLAYALLONRESUME);		// 0xA4
	command(SEGREMAP | 0x1);
	command(COMSCANDEC);
	//	command(SETCOMPINS, 0x12);			// 0xDA
	command(SETCONTRAST, 0x8F);			// 0x81
	command(SETPRECHARGE, 0xF1);		// 0xD9
	command(SETVCOMDESELECT, 0x40);		// 0xDB
	command(DISPLAYON);					//--turn on oled panel

	clear(ALL);							// Erase hardware memory inside the OLED controller to avoid random data in memory.

	//	Serial.begin(115200);				// removed the Serial.begin() so that user can decide their own baud rate.
}

void MicroView::end() {
	DCLOW;						// Just in case
	command(DISPLAYOFF);
	command(CHARGEPUMP, 0x10);	// Disable the charge pump
	nrf_delay_us(150);					// Wait for charge pump off
	RESETLOW;
	SSLOW;
	MVSPI.end();				// Disable SPI mode
}

void MicroViewSlider::drawFace() {
	uint8_t endOffset;

	//Horizontal styles, style 0 or 1
	if (style==0 || style==1) {
		endOffset = posX + totalTicks + 2;
		// Draw minor ticks
		for (uint8_t i=posX+1; i<endOffset; i+=2) {
			uView.lineV(i, posY+5, 3);
		}
		// Draw extensions for major ticks
		for (uint8_t i=posX+1; i<endOffset; i+=10) {
			uView.lineV(i, posY+3, 2);
		}
	}
	//Vertical styles, style 2 or 3
	else {
		endOffset = posY + totalTicks + 2;
		// Draw minor ticks
		for (uint8_t i=posY+1; i<=endOffset; i+=2) {
			uView.lineH(posX, i, 3);
		}
		// Draw extensions for major ticks
		for (uint8_t i=posY+1; i<=endOffset; i+=10) {
			uView.lineH(posX+3, i, 2);
		}
	}
}

void MicroViewSlider::draw() {
	drawPointer(); // Erase the previous pointer
	prevValue=value;
	drawPointer(); // Draw the current pointer

	// Draw numeric value if required
	if (!noValDraw) {
		switch(style) {
			case 0:
				uView.setCursor(posX+totalTicks+4, posY+1);
				break;
			case 1:
				uView.setCursor(posX, posY+10);
				break;
			case 2:
				uView.setCursor(posX+1, posY+totalTicks+4);
				break;
			default:
				uView.setCursor(posX+9, posY);
				break;
		}

		drawNumValue(prevValue);
	}
}

void MicroViewGauge::drawFace() {
	float degreeSec, fromSecX, fromSecY, toSecX, toSecY;

	uView.circle(posX, posY, radius);

	for (int i=150;i<=390;i+=30) {	// Major tick from 150 degree to 390 degree
		degreeSec=i*(PI/180);
		fromSecX = cos(degreeSec) * (radius / 1.5);
		fromSecY = sin(degreeSec) * (radius / 1.5);
		toSecX = cos(degreeSec) * radius;
		toSecY = sin(degreeSec) * radius;
		uView.line(1+posX+fromSecX, 1+posY+fromSecY, 1+posX+toSecX, 1+posY+toSecY);
	}
	
	if (radius>15) {
		for (int i=165;i<=375;i+=30) {	// Minor tick from 165 degree to 375 degree
			degreeSec=i*(PI/180);
			fromSecX = cos(degreeSec) * (radius / 1.3);
			fromSecY = sin(degreeSec) * (radius / 1.3);
			toSecX = cos(degreeSec) * radius;
			toSecY = sin(degreeSec) * radius;
			uView.line(1+posX+fromSecX, 1+posY+fromSecY, 1+posX+toSecX, 1+posY+toSecY);
		}
	}
}

void MicroViewGauge::draw() {
	drawPointer(); // Erase the previous pointer
	prevValue=value;
	drawPointer(); // Draw the current pointer

	// Draw numeric value if required
	if (!noValDraw) {
		uint8_t offsetX = posX - (maxValLen * 3 - 1);  // Offset left of centre to print the value

		if (style > 0)
			uView.setCursor(offsetX, posY+10);
		else
			uView.setCursor(offsetX, posY+11);

		drawNumValue(prevValue);
	}
}

void MicroViewClock::drawFace() {
	float degreeSec, fromSecX, fromSecY, toSecX, toSecY;

	uView.circle(posX, posY, radius);

	for (int i=0;i<=360;i+=30) {	// Major tick from 150 degree to 390 degree
		degreeSec=i*(PI/180);
		fromSecX = cos(degreeSec) * (radius / 1.5);
		fromSecY = sin(degreeSec) * (radius / 1.5);
		toSecX = cos(degreeSec) * radius;
		toSecY = sin(degreeSec) * radius;
		uView.line(1+posX+fromSecX, 1+posY+fromSecY, 1+posX+toSecX, 1+posY+toSecY);
	}
	/*
	if (radius>15) {
		for (int i=6;i<=375;i+=6) {	// Minor tick from 165 degree to 375 degree
			degreeSec=i*(PI/180);
			fromSecX = cos(degreeSec) * (radius / 1.1);
			fromSecY = sin(degreeSec) * (radius / 1.1);
			toSecX = cos(degreeSec) * radius;
			toSecY = sin(degreeSec) * radius;
			uView.line(1+posX+fromSecX, 1+posY+fromSecY, 1+posX+toSecX, 1+posY+toSecY);
		}
	}
	*/
}

void MicroViewClock::draw() {
	drawPointer(); // Erase the previous pointer
	prevValue=value;
	drawPointer(); // Draw the current pointer

	// Draw numeric value if required
	if (!noValDraw) {
		uint8_t offsetX = posX - (maxValLen * 3 - 1);  // Offset left of centre to print the value

		if (style > 0)
			uView.setCursor(offsetX, posY+10);
		else
			uView.setCursor(offsetX, posY+11);

		drawNumValue(prevValue);
	}
}

void MVSPIClass::begin() {

	// Set SS to high so the display will be "deselected" by default
	SSHIGH;
	// Warning: if the SS pin ever becomes a LOW INPUT then SPI
	// automatically switches to Slave.
	// This should not occur with the MicroView as nothing can drive the pin.

	// Set DC low for command mode, where it should always default to unless
	// data is being transmitted.
	DCLOW;

	// Set SCK and MOSI to be outputs and low when SPI is disabled.
	CLKHIGH;
	DATLOW;


}

void MVSPIClass::end() {
  SSHIGH;
	CLKHIGH;
	DATLOW;

}
