==> czetie/MicroView-Arduino-Library/MicroView.cpp <==
#include <avr/pgmspace.h>
#include <MicroView.h>
#define PROGMEM __attribute__((section(".progmem.data")))
#include <font5x7.h>
#include <font8x16.h>
#include <fontlargenumber.h>
#include <7segment.h>
#include <space01.h>
#include <space02.h>
#include <space03.h>
#define TOTALFONTS		7
#define recvLEN			100

void MicroView::begin() {
	// default 5x7 font
	setFontType(0);
	setColor(WHITE);
	setDrawMode(NORM);
	setCursor(0,0);
	
	pinMode(OLEDPWR, OUTPUT);
	digitalWrite(OLEDPWR,HIGH);
	// Setting up SPI pins
	pinMode(MOSI, OUTPUT);
	pinMode(SCK, OUTPUT);
	
	//pinMode(DC, OUTPUT);
	pinMode(RESET, OUTPUT);
	pinMode(SS, INPUT);
	digitalWrite(SS, HIGH);
	
	ssport		= portOutputRegister(digitalPinToPort(SS));
	sspinmask	= digitalPinToBitMask(SS);
	ssreg		= portModeRegister(digitalPinToPort(SS));
	
	dcport		= portOutputRegister(digitalPinToPort(DC));
	dcpinmask	= digitalPinToBitMask(DC);
	dcreg		= portModeRegister(digitalPinToPort(DC));
	
	digitalWrite(RESET, HIGH);
	// VDD (3.3V) goes high at start, lets just chill for 5 ms
	delay(5);
	// bring reset low
	digitalWrite(RESET, LOW);
	
	// Setup SPI frequency
	MVSPI.setClockDivider(SPI_CLOCK_DIV2); 
	MVSPI.begin();
	
	// wait 10ms
	delay(10);
	// bring out of reset
	pinMode(RESET,INPUT_PULLUP);
	//digitalWrite(RESET, HIGH);

	// Init sequence for 64x48 OLED module
	command(DISPLAYOFF);			// 0xAE

	command(SETDISPLAYCLOCKDIV);	// 0xD5
	command(0x80);					// the suggested ratio 0x80

	command(SETMULTIPLEX);			// 0xA8
	command(0x2F);

	command(SETDISPLAYOFFSET);		// 0xD3
	command(0x0);					// no offset

	command(SETSTARTLINE | 0x0);	// line #0

	command(CHARGEPUMP);			// enable charge pump
	command(0x14);

	command(NORMALDISPLAY);			// 0xA6
	command(DISPLAYALLONRESUME);	// 0xA4

	command(SEGREMAP | 0x1);
	command(COMSCANDEC);

	command(SETCOMPINS);			// 0xDA
	command(0x12);

	command(SETCONTRAST);			// 0x81
	command(0x8F);

	command(SETPRECHARGE);			// 0xd9
	command(0xF1);
	
	command(SETVCOMDESELECT);			// 0xDB
	command(0x40);

	command(DISPLAYON);				//--turn on oled panel
	clear(ALL);						// Erase hardware memory inside the OLED controller to avoid random data in memory.
	Serial.begin(115200);
}

	void MicroViewSlider::drawFace() {
		uint8_t offsetX, offsetY, majorLine;
		offsetX=getX();
		offsetY=getY();
		
		if(style==0)	
			majorLine=4;
		else	if (style==1)	
			majorLine=7;
		else	if (style==2)
			majorLine=3;
		else if (style==3)
			majorLine=5;



//Horizontal styles, style 0 or 1

		if (style==0 || style==1) {
			// Draw major tickers
			for (uint8_t i=0; i<majorLine;i++) {
				uView.lineV(offsetX+1+(i*10), offsetY+3, 5);
			}
			// Draw minor tickers
			for (uint8_t i=0; i<4;i++) {
				uView.lineV(offsetX+3+(i*2), offsetY+5, 3);
			}
			for (uint8_t i=0; i<4;i++) {
				uView.lineV(offsetX+13+(i*2), offsetY+5, 3);
			}
			for (uint8_t i=0; i<4;i++) {
				uView.lineV(offsetX+23+(i*2), offsetY+5, 3);
			}
		
			if(style==1) {			//Longer line, more minor ticks
				for (uint8_t i=0; i<4;i++) {
					uView.lineV(offsetX+33+(i*2), offsetY+5, 3);
				}
				for (uint8_t i=0; i<4;i++) {
					uView.lineV(offsetX+43+(i*2), offsetY+5, 3);
				}
				for (uint8_t i=0; i<4;i++) {
					uView.lineV(offsetX+53+(i*2), offsetY+5, 3);
				}
			}
		}
//Vertical styles, style 2 or 3
		else {
			// Draw major tickers
			for (uint8_t i=0; i<majorLine;i++) {
				uView.lineH(offsetX, offsetY+1+(i*10), 5);
			}
			// Draw minor tickers
			for (uint8_t i=0; i<4;i++) {
				uView.lineH(offsetX, offsetY+3+(i*2), 3);
			}
			for (uint8_t i=0; i<4;i++) {
				uView.lineH(offsetX, offsetY+13+(i*2), 3);
			}
		
			if(style==3) {			//Explicit test for style
				for (uint8_t i=0; i<4;i++) {
					uView.lineH(offsetX, offsetY+23+(i*2), 3);
				}
				for (uint8_t i=0; i<4;i++) {
					uView.lineH(offsetX, offsetY+33+(i*2), 3);
				}

			}
		}

		
	}

	void MicroViewSlider::draw() {
		uint8_t offsetX, offsetY;
		uint8_t tickPosition=0;
		char strBuffer[5];
		offsetX=getX();
		offsetY=getY();

		if (needFirstDraw) {
			if (style==0 || style==1){		//Horizontal
				uView.lineH(offsetX+tickPosition, offsetY, 3, WHITE, XOR);
				uView.pixel(offsetX+1+tickPosition, offsetY+1, WHITE, XOR);
			}
			else {					//Vertical
				uView.lineV(offsetX+7, offsetY+tickPosition, 3, WHITE, XOR);
				uView.pixel(offsetX+6, offsetY+1+tickPosition, WHITE, XOR);
			}

			sprintf(strBuffer,"%4d", prevValue);	// we need to force 4 digit so that blank space will cover larger value
			needFirstDraw=false;
		}
		else {
			// Draw previous pointer in XOR mode to erase it
			tickPosition= (((float)(prevValue-getMinValue())/(float)(getMaxValue()-getMinValue()))*totalTicks);
			if (style==0 || style==1){		//Horizontal
				uView.lineH(offsetX+tickPosition,offsetY, 3, WHITE, XOR);
				uView.pixel(offsetX+1+tickPosition,offsetY+1, WHITE, XOR);
			}
			else {					//Vertical
				uView.lineV(offsetX+7, offsetY+tickPosition, 3, WHITE, XOR);
				uView.pixel(offsetX+6, offsetY+1+tickPosition, WHITE, XOR);
			}

			// Draw current pointer
			tickPosition= (((float)(getValue()-getMinValue())/(float)(getMaxValue()-getMinValue()))*totalTicks);
			if (style==0 || style==1){		//Horizontal
				uView.lineH(offsetX+tickPosition,offsetY, 3, WHITE, XOR);
				uView.pixel(offsetX+1+tickPosition,offsetY+1, WHITE, XOR);
			}
			else {					//Vertical
				uView.lineV(offsetX+7, offsetY+tickPosition, 3, WHITE, XOR);
				uView.pixel(offsetX+6, offsetY+1+tickPosition, WHITE, XOR);
			}

			sprintf(strBuffer,"%4d", getValue());	// we need to force 4 digit so that blank space will cover larger value
			prevValue=getValue();
		}

		// Draw value
		if(style==0)
			uView.setCursor(offsetX+34,offsetY+1);
		else	if (style==1)
			uView.setCursor(offsetX,offsetY+10);
		else if (style==2)
			uView.setCursor(offsetX+1,offsetY+24);
		else //style==3
			uView.setCursor(offsetX+9,offsetY);

		uView.print(strBuffer);
	}

	void MicroViewGauge::drawFace() {
		uint8_t offsetX, offsetY;
		float degreeSec, fromSecX, fromSecY, toSecX, toSecY;
		offsetX=getX();
		offsetY=getY();

		uView.circle(offsetX,offsetY,radius);
		
		for (int i=150;i<=390;i+=30) {	// Major tick from 150 degree to 390 degree
			degreeSec=i*(PI/180);
			fromSecX = cos(degreeSec) * (radius / 1.5);
			fromSecY = sin(degreeSec) * (radius / 1.5);
			toSecX = cos(degreeSec) * (radius / 1);
			toSecY = sin(degreeSec) * (radius / 1);
			uView.line(1+offsetX+fromSecX,1+offsetY+fromSecY,1+offsetX+toSecX,1+offsetY+toSecY);
		}
		
		if(radius>15) {
			for (int i=150;i<=390;i+=15) {	// Minor tick from 150 degree to 390 degree
				degreeSec=i*(PI/180);
				fromSecX = cos(degreeSec) * (radius / 1.3);
				fromSecY = sin(degreeSec) * (radius / 1.3);
				toSecX = cos(degreeSec) * (radius / 1);
				toSecY = sin(degreeSec) * (radius / 1);
				uView.line(1+offsetX+fromSecX,1+offsetY+fromSecY,1+offsetX+toSecX,1+offsetY+toSecY);
			}
		}
	}

	void MicroViewGauge::draw() {
		uint8_t offsetX, offsetY;
		float degreeSec, toSecX, toSecY;

		char strBuffer[5];
		offsetX=getX();
		offsetY=getY();

		if (needFirstDraw) {
			degreeSec = (((float)(prevValue-getMinValue())/(float)(getMaxValue()-getMinValue()))*240);	// total 240 degree in the widget
			degreeSec = (degreeSec+150) * (PI/180);		// 150 degree starting point
			toSecX = cos(degreeSec) * (radius / 1.2);
			toSecY = sin(degreeSec) * (radius / 1.2);
			uView.line(offsetX,offsetY,1+offsetX+toSecX,1+offsetY+toSecY, WHITE,XOR);
			sprintf(strBuffer,"%4d", prevValue);	// we need to force 4 digit so that blank space will cover larger value
			needFirstDraw=false;
		}
		else {
			// Draw previous pointer in XOR mode to erase it
			degreeSec = (((float)(prevValue-getMinValue())/(float)(getMaxValue()-getMinValue()))*240);	// total 240 degree in the widget
			degreeSec = (degreeSec+150) * (PI/180);
			toSecX = cos(degreeSec) * (radius / 1.2);
			toSecY = sin(degreeSec) * (radius / 1.2);
			uView.line(offsetX,offsetY,1+offsetX+toSecX,1+offsetY+toSecY, WHITE,XOR);

			degreeSec = (((float)(getValue()-getMinValue())/(float)(getMaxValue()-getMinValue()))*240);	// total 240 degree in the widget
			degreeSec = (degreeSec+150) * (PI/180);		// 150 degree starting point
			toSecX = cos(degreeSec) * (radius / 1.2);
			toSecY = sin(degreeSec) * (radius / 1.2);
			uView.line(offsetX,offsetY,1+offsetX+toSecX,1+offsetY+toSecY, WHITE,XOR);

			sprintf(strBuffer,"%4d", getValue());	// we need to force 4 digit so that blank space will cover larger value
			prevValue=getValue();
		}

		// Draw value
		if(style>0) 
		uView.setCursor(offsetX-10,offsetY+10);
		else
		uView.setCursor(offsetX-11,offsetY+11);
		
		uView.print(strBuffer);
	}

	void MVSPIClass::begin() {
		// Set SS to high so a connected chip will be "deselected" by default
		digitalWrite(SS, HIGH);

		// When the SS pin is set as OUTPUT, it can be used as
		// a general purpose output port (it doesn't influence
		// SPI operations).
		pinMode(SS, OUTPUT);

		// Warning: if the SS pin ever becomes a LOW INPUT then SPI
		// automatically switches to Slave, so the data direction of
		// the SS pin MUST be kept as OUTPUT.
		SPCR |= _BV(MSTR);
		SPCR |= _BV(SPE);

		// Set direction register for SCK and MOSI pin.
		// MISO pin automatically overrides to INPUT.
		// By doing this AFTER enabling SPI, we avoid accidentally
		// clocking in a single bit since the lines go directly
		// from "input" to SPI control.  
		// http://code.google.com/p/arduino/issues/detail?id=888
		pinMode(SCK, OUTPUT);
		pinMode(MOSI, OUTPUT);
	}

	void MVSPIClass::end() {
		SPCR &= ~_BV(SPE);
	}
